# voyager-agent

./: .gitignore  CONVERSATION_RESEARCH.md  CONVERSATION_RESEARCH_EN.md  MYPLAN.md  Makefile  PRE_MVP_CONCIERGE_PLAN.md  README.md  SPEC.md  TEST_CONVERSATIONS.sh  Voyager-desciption.md  ideas.md  summary.md  todo-thoughts.md  todo.md
apps/mobile/: .env  .env.example  .gitignore  Dockerfile  app.json  (+5 more)
docker/: docker-compose.yml
services/api/: .env.example  ARCHITECTURE_NOTES.md  Dockerfile  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_concierge_core.py  0002_wedding_vendors.py  0003_user_roles_profile.py
services/api/app/: config.py  main.py
services/api/app/api/v1/endpoints/: auth.py  chat.py  search.py  wedding.py
services/api/app/concierge/: __init__.py  service.py
services/api/app/db/: session.py
services/api/app/domains/: __init__.py  base.py  registry.py
services/api/app/domains/voyager/: __init__.py  pack.py
services/api/app/domains/wedding/: README.md  __init__.py  categories.py  inventory.py  pack.py
services/api/app/domains/wedding/data/: vendors.json
services/api/app/models/: __init__.py  concierge.py  conversation.py  user.py  wedding.py
services/api/app/schemas/: __init__.py  chat.py  wedding.py
services/api/app/scripts/: load_wedding_vendors.py
services/api/app/services/: fake_data.py  letsfg.py  swoop.py
services/api/app/services/agents/: tools.py  travel_agent.py
services/api/scripts/: generate_bodas_vendor_seed.py  generate_curated_vendors.py
static/: index.html
(+20 files in other folders)
